--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,11 @@ services:
       DATABASE_PORT: ${DATABASE_PORT}
       DATABASE_USERNAME: ${DATABASE_USERNAME}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD}
+      ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
     volumes:
-      - ./backend:/srv/app
+      - ./backend:/srv/backend
     ports:
-      - '1337:1337'
+      - 1337:1337
     depends_on:
       - postgres
     restart: always
@@ -28,7 +29,7 @@ services:
     ports:
         - 5432:5432
     volumes:
-      - ./backend/data:/var/lib/postgresql/data
+      - ./data:/var/lib/postgresql/data
   
   frontend:
     build:
@@ -44,7 +45,18 @@ services:
       NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
       DATABASE_URL: ${DATABASE_URL}
       NEXTAUTH_URL: ${NEXTAUTH_URL}
-    ports: 
-      - 3000:3000
     depends_on:
       - postgres
+    ports:
+      - 3000:3000
+  
+  nginx:
+    build: ./nginx
+    ports:
+      - 80:80
+      - 443:443
+    depends_on:
+      - frontend
+      - backend
+    volumes: 
+      - ./certs:/etc/nginx/certs
