--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,11 +13,11 @@ services:
       ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
     volumes:
       - ./backend:/srv/backend
-    ports:
-      - 1337:1337
     depends_on:
       - postgres
     restart: always
+    ports:
+      - 3000:3000
 
   postgres:
     image: postgres
@@ -27,7 +27,7 @@ services:
       POSTGRES_USER: ${DATABASE_USERNAME}
       POSTGRES_PASSWORD: ${DATABASE_PASSWORD}
     ports:
-        - 5432:5432
+        - 5433:5432
     volumes:
       - ./data:/var/lib/postgresql/data
   
@@ -47,11 +47,10 @@ services:
       NEXTAUTH_URL: ${NEXTAUTH_URL}
     depends_on:
       - postgres
-    ports:
-      - 3000:3000
   
   nginx:
-    build: ./nginx
+    build: 
+      context: ./nginx
     ports:
       - 80:80
       - 443:443
