--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,58 +12,45 @@ upstream nextjs {
 
 # Block server for Backend
 server {
-    # Listen HTTP
-    listen 80;
-    server_name gdeapi.eby.org.ar;
+  # Listen HTTP
+  listen 80;
+  # Listen HTTPS
+  listen 443 ssl;
+  server_name gdeapi.eby.org.ar;
 
-    # Redirect HTTP to HTTPS
-    return 301 https://$host$request_uri;
-}
+  # SSL config
+  ssl_certificate /etc/nginx/certs/eby.org.ar.chained.crt;
+  ssl_certificate_key /etc/nginx/certs/eby.org.ar.key;
 
-server {
-    # Listen HTTPS
-    listen 443 ssl;
-    server_name gdeapi.eby.org.ar;
-
-    # SSL config
-    ssl_certificate /etc/nginx/certs/eby.org.ar.crt;
-    ssl_certificate_key /etc/nginx/certs/eby.org.ar.rsa;
-
-    # Proxy Config
-    location / {
-        proxy_pass http://strapi;
-        proxy_http_version 1.1;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_set_header Host $http_host;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "Upgrade";
-        proxy_pass_request_headers on;
-    }
+  # Proxy Config
+  location / {
+      proxy_pass http://strapi;
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-Host $host;
+      proxy_set_header X-Forwarded-Server $host;
+      proxy_set_header X-Real-IP $remote_addr;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header X-Forwarded-Proto $scheme;
+      proxy_set_header Host $http_host;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+      proxy_pass_request_headers on;
+  }
 }
 
 # Block server for frontend
 server {
   # Listen HTTP
   listen 80;
-  server_name expedientes.eby.org.ar www.expedientes.eby.org.ar;
-
-  # Redirect HTTP to HTTPS
-  return 301 https://$host$request_uri;
-}
-
-server {
   # Listen HTTPS
   listen 443 ssl;
   server_name www.expedientes.eby.org.ar expedientes.eby.org.ar;
 
   # SSL config
-  ssl_certificate /etc/nginx/certs/eby.org.ar.crt;
-  ssl_certificate_key /etc/nginx/certs/eby.org.ar.rsa;
+  ssl_certificate /etc/nginx/certs/eby.org.ar.chained.crt;
+  ssl_certificate_key /etc/nginx/certs/eby.org.ar.key;
 
+  ssl_protocols              TLSv1.2;
   server_tokens off;
 
   gzip on;
