primer commit en listas multiples

--- a/backend/api/listas/models/listas.settings.json
+++ b/backend/api/listas/models/listas.settings.json
@@ -19,7 +19,7 @@
       "unique": false
     },
     "usuario": {
-      "via": "lista",
+      "via": "listas",
       "plugin": "users-permissions",
       "model": "user"
     },
