--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-query": "^3.16.0",
+    "react-sortable-hoc": "^2.0.0",
     "recharts": "^2.0.9"
   },
   "browser": {
