--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,16 +3,24 @@ FROM marcelobaez/oracle-ic19:0.1.0 AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
 # RUN apk add --no-cache libc6-compat
 WORKDIR /app
-COPY package.json yarn.lock ./
-RUN yarn install --frozen-lockfile
+
+# Install dependencies based on the preferred package manager
+COPY package.json yarn.lock* package-lock.json* pnpm-lock.yaml* ./
+RUN \
+  if [ -f yarn.lock ]; then yarn --frozen-lockfile; \
+  elif [ -f package-lock.json ]; then npm ci; \
+  elif [ -f pnpm-lock.yaml ]; then yarn global add pnpm && pnpm i; \
+  else echo "Lockfile not found." && exit 1; \
+  fi
 
 # Rebuild the source code only when needed
 FROM marcelobaez/oracle-ic19:0.1.0 AS builder
 WORKDIR /app
-COPY . .
 COPY --from=deps /app/node_modules ./node_modules
+COPY . .
 ENV NEXT_PUBLIC_SITE_URL 'https://expedientes.eby.org.ar'
-RUN yarn build && yarn install --production --ignore-scripts --prefer-offline
+
+RUN npm run build
 
 # Production image, copy all the files and run next
 FROM marcelobaez/oracle-ic19:0.1.0 AS runner
@@ -39,4 +47,4 @@ EXPOSE 3000
 # Uncomment the following line in case you want to disable telemetry.
 ENV NEXT_TELEMETRY_DISABLED 1
 
-CMD ["yarn", "start"]
+CMD ["npm", "run", "start"]
