--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,21 +8,21 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/icons": "4.2.1",
-    "@next/bundle-analyzer": "^9.1.4",
-    "antd": "latest",
+    "@ant-design/icons": "^4.7.0",
+    "@next/bundle-analyzer": "^12.2.3",
+    "antd": "^4.22.2",
     "axios": "^0.21.1",
     "cross-env": "^7.0.2",
     "date-fns": "^2.22.1",
     "dayjs": "1.8.28",
     "esm": "^3.2.25",
-    "next": "^11.0.0",
-    "next-auth": "^3.27.0",
+    "next": "^12.2.2",
+    "next-auth": "^3.29.9",
     "oracledb": "^5.2.0",
     "pg": "^8.6.0",
     "qs": "^6.7.0",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-query": "^3.16.0",
     "react-sortable-hoc": "^2.0.0",
     "recharts": "^2.0.9"
