--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@next/bundle-analyzer": "^12.3.1",
     "antd": "^4.23.6",
     "axios": "^0.21.1",
+    "cookies-next": "^2.1.1",
     "cross-env": "^7.0.2",
     "date-fns": "^2.29.3",
     "dayjs": "1.8.28",
