--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -58,6 +58,9 @@ server {
   gzip_comp_level 4;
   gzip_types text/css application/javascript image/svg+xml;
 
+  proxy_busy_buffers_size   512k;
+  proxy_buffers   4 512k;
+  proxy_buffer_size   256k;
   proxy_http_version 1.1;
   proxy_set_header Upgrade $http_upgrade;
   proxy_set_header Connection 'upgrade';
