--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,7 @@
     "qs": "^6.7.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-export-excel": "^0.5.3",
     "react-query": "^3.16.0",
     "react-sortable-hoc": "^2.0.0",
     "recharts": "^2.1.15"
