--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,9 @@
 # Install dependencies only when needed
 FROM marcelobaez/oracle-ic19:0.1.0 AS deps
 # Check https://github.com/nodejs/docker-node/tree/b4117f9333da4138b03a546ec926ef50a31506c3#nodealpine to understand why libc6-compat might be needed.
-# RUN apk add --no-cache libc6-compat
+
+# Install git for non published packages
+RUN apk add --no-cache git
 WORKDIR /app
 
 # Install dependencies based on the preferred package manager
