--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,11 +23,12 @@
     "pg": "^8.8.0",
     "qs": "^6.7.0",
     "react": "^17.0.2",
+    "react-data-export": "^0.6.0",
     "react-dom": "^17.0.2",
-    "react-export-excel": "^0.5.3",
     "react-query": "^3.16.0",
     "react-sortable-hoc": "^2.0.0",
-    "recharts": "^2.1.15"
+    "recharts": "^2.1.15",
+    "xlsx": "^0.18.5"
   },
   "browser": {
     "fs": false,
