--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,2 +1,24 @@
+## Server Settings
+
 HOST=0.0.0.0
 PORT=1337
+APP_KEYS=
+
+## Admin Settings
+
+API_TOKEN_SALT=
+ADMIN_JWT_SECRET=
+
+## Users-Permissions Plugin Settings
+
+JWT_SECRET=
+
+## Database Settings
+
+DATABASE_HOST=localhost
+DATABASE_PORT=5432
+DATABASE_NAME=strapi
+DATABASE_USERNAME=strapiuser
+DATABASE_PASSWORD=strapipwd
+DATABASE_SSL=false
+DATABASE_SCHEMA=public
