--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,18 +1,48 @@
-FROM strapi/base
+# FROM strapi/base
 
-WORKDIR /backend
+# WORKDIR /backend
 
-COPY ./package.json ./
-COPY ./package-lock.json ./
+# COPY ./package.json ./
+# COPY ./package-lock.json ./
 
+# RUN npm install --production
+
+# COPY . .
+
+# ENV NODE_ENV production
+
+# RUN npm run build
+
+# EXPOSE 1337
+
+# CMD ["npm", "run", "start"]
+
+
+FROM node:18-alpine as build
+# Installing libvips-dev for sharp Compatability
+RUN apk update && apk add --no-cache build-base gcc autoconf automake zlib-dev libpng-dev vips-dev > /dev/null 2>&1
+ARG NODE_ENV=production
+ENV NODE_ENV=${NODE_ENV}
+WORKDIR /opt/
+COPY ./package.json ./package-lock.json ./
+ENV PATH /opt/node_modules/.bin:$PATH
 RUN npm install --production
+WORKDIR /opt/app
+COPY ./ .
 
-COPY . .
-
-ENV NODE_ENV production
-
+ARG NEXT_PUBLIC_API_URL
+ENV NEXT_PUBLIC_API_URL=${NEXT_PUBLIC_API_URL}
 RUN npm run build
 
+FROM node:18-alpine
+# Installing libvips-dev for sharp Compatability
+RUN apk add --no-cache vips-dev
+ARG NODE_ENV=production
+ENV NODE_ENV=${NODE_ENV}
+WORKDIR /opt/
+COPY --from=build /opt/node_modules ./node_modules
+ENV PATH /opt/node_modules/.bin:$PATH
+WORKDIR /opt/app
+COPY --from=build /opt/app ./
 EXPOSE 1337
-
-CMD ["npm", "run", "start"]
+CMD ["npm", "run","start"]
