--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,25 +8,27 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.7.0",
+    "@ant-design/compatible": "^5.1.2",
+    "@ant-design/cssinjs": "^1.16.1",
+    "@ant-design/icons": "^5.2.4",
+    "@ant-design/pro-layout": "^7.16.7",
     "@next/bundle-analyzer": "^12.3.1",
-    "antd": "^4.23.6",
+    "antd": "^5.8.2",
     "axios": "^0.21.1",
     "cookies-next": "^2.1.1",
     "cross-env": "^7.0.2",
     "date-fns": "^2.29.3",
     "dayjs": "1.8.28",
     "esm": "^3.2.25",
-    "next": "^12.3.1",
-    "next-auth": "^3.29.9",
+    "next": "^13.4.12",
+    "next-auth": "^4.22.3",
     "oracledb": "^5.5.0",
     "pg": "^8.8.0",
     "qs": "^6.7.0",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-data-export": "^0.6.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-query": "^3.16.0",
-    "react-sortable-hoc": "^2.0.0",
     "recharts": "^2.1.15",
     "xlsx": "^0.18.5"
   },
@@ -36,8 +38,8 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^7.29.0",
-    "eslint-config-next": "^11.0.1",
+    "eslint": "^8.39.0",
+    "eslint-config-next": "^13.4.12",
     "postcss-preset-env": "^6.7.0"
   }
 }
