--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
     "esm": "^3.2.25",
     "next": "^13.4.12",
     "next-auth": "^4.22.3",
-    "oracledb": "^5.5.0",
+    "oracledb": "^6.1.0",
     "pg": "^8.8.0",
     "qs": "^6.7.0",
     "react": "^18.2.0",
@@ -38,6 +38,7 @@
   },
   "license": "MIT",
   "devDependencies": {
+    "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.39.0",
     "eslint-config-next": "^13.4.12",
     "postcss-preset-env": "^6.7.0"
