--- a/backend/package.json
+++ b/backend/package.json
@@ -10,9 +10,9 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "4.12.0",
-    "@strapi/plugin-users-permissions": "4.12.0",
-    "@strapi/strapi": "4.12.0",
+    "@strapi/plugin-i18n": "^4.14.5",
+    "@strapi/plugin-users-permissions": "^4.14.5",
+    "@strapi/strapi": "^4.14.5",
     "better-sqlite3": "^7.6.2",
     "pg": "^8.6.0"
   },
