--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,10 +17,10 @@
     "date-fns": "^2.29.3",
     "dayjs": "1.8.28",
     "esm": "^3.2.25",
+    "export-to-csv": "^1.2.1",
     "next": "^13.4.12",
     "next-auth": "^4.22.3",
     "oracledb": "^6.1.0",
-    "pg": "^8.8.0",
     "qs": "^6.7.0",
     "react": "^18.2.0",
     "react-data-export": "^0.6.0",
