--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -16,7 +16,7 @@ server {
   listen 80;
   # Listen HTTPS
   listen 443 ssl;
-  server_name gdeapi.eby.org.ar;
+  server_name testgdeapi.eby.org.ar;
 
   # SSL config
   ssl_certificate /etc/nginx/certs/eby.org.ar.chained.crt;
@@ -44,7 +44,7 @@ server {
   listen 80;
   # Listen HTTPS
   listen 443 ssl;
-  server_name www.expedientes.eby.org.ar expedientes.eby.org.ar;
+  server_name www.testexp.eby.org.ar testexp.eby.org.ar;
 
   # SSL config
   ssl_certificate /etc/nginx/certs/eby.org.ar.chained.crt;
