--- a/backend/package.json
+++ b/backend/package.json
@@ -14,7 +14,8 @@
     "@strapi/plugin-users-permissions": "^4.14.5",
     "@strapi/strapi": "^4.14.5",
     "better-sqlite3": "^7.6.2",
-    "pg": "^8.6.0"
+    "pg": "^8.6.0",
+    "strapi-plugin-import-export-entries": "^1.22.1"
   },
   "author": {
     "name": "A Strapi developer"
