--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,24 +12,21 @@
     "@ant-design/cssinjs": "^1.16.1",
     "@ant-design/icons": "^5.2.4",
     "@ant-design/pro-layout": "^7.16.7",
-    "@next/bundle-analyzer": "^12.3.1",
-    "antd": "^5.8.2",
+    "antd": "^5.10.2",
     "axios": "^0.21.1",
-    "cookies-next": "^2.1.1",
-    "cross-env": "^7.0.2",
     "date-fns": "^2.29.3",
     "dayjs": "1.8.28",
     "esm": "^3.2.25",
+    "export-to-csv": "^1.2.1",
     "next": "^13.4.12",
     "next-auth": "^4.22.3",
     "oracledb": "^6.1.0",
-    "pg": "^8.8.0",
     "qs": "^6.7.0",
     "react": "^18.2.0",
     "react-data-export": "^0.6.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-query": "^3.16.0",
-    "recharts": "^2.1.15",
     "xlsx": "^0.18.5"
   },
   "browser": {
@@ -40,7 +37,6 @@
   "devDependencies": {
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.39.0",
-    "eslint-config-next": "^13.4.12",
-    "postcss-preset-env": "^6.7.0"
+    "eslint-config-next": "^13.4.12"
   }
 }
