--- a/backend/package.json
+++ b/backend/package.json
@@ -1,12 +1,16 @@
 {
   "name": "eby-exp-api",
-  "private": true,
   "version": "0.1.0",
-  "description": "A Strapi application",
+  "private": true,
+  "description": "Rest Api for Eby Exp",
+  "license": "MIT",
+  "author": {
+    "name": "Marcelo Baez"
+  },
   "scripts": {
+    "build": "strapi build",
     "develop": "strapi develop",
     "start": "strapi start",
-    "build": "strapi build",
     "strapi": "strapi"
   },
   "dependencies": {
@@ -21,16 +25,12 @@
     "strapi-plugin-import-export-entries": "^1.22.1",
     "styled-components": "^5.3.11"
   },
-  "author": {
-    "name": "A Strapi developer"
-  },
-  "strapi": {
-    "uuid": "e3cc2e44-028f-4e69-9045-c74eb4756e7f"
-  },
   "engines": {
     "node": ">=14.19.1 <=18.x.x",
     "npm": ">=6.0.0"
   },
-  "telemetryDisabled": true,
-  "license": "MIT"
+  "strapi": {
+    "uuid": "e3cc2e44-028f-4e69-9045-c74eb4756e7f"
+  },
+  "telemetryDisabled": true
 }
