--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,8 @@ services:
       context: ./backend
       args:
         NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
-    environment:
-      DATABASE_CLIENT: postgres
-      DATABASE_NAME: ${DATABASE_NAME}
-      DATABASE_HOST: ${DATABASE_HOST}
-      DATABASE_PORT: ${DATABASE_PORT}
-      DATABASE_USERNAME: ${DATABASE_USERNAME}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD}
-      ADMIN_JWT_SECRET: ${ADMIN_JWT_SECRET}
-      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
-      JWT_SECRET: ${JWT_SECRET}
-      APP_KEYS: ${APP_KEYS}
-      API_TOKEN_SALT: ${API_TOKEN_SALT}
+    env_file:
+      - .env
     volumes:
       - ./backend/config:/srv/backend/config
       - ./backend/src:/srv/backend/src
@@ -36,20 +26,11 @@ services:
       context: ./frontend
       args:
         NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
+    env_file:
+      - .env
     restart: always
     environment:
-      NODE_ORACLEDB_USER: ${NODE_ORACLEDB_USER}
-      NODE_ORACLEDB_PASSWORD: ${NODE_ORACLEDB_PASSWORD}
-      NODE_ORACLEDB_CONNECTIONSTRING: ${NODE_ORACLEDB_CONNECTIONSTRING}
-      AZURE_CLIENT_ID: ${AZURE_CLIENT_ID}
-      AZURE_CLIENT_SECRET: ${AZURE_CLIENT_SECRET}
-      AZURE_TENANT_ID: ${AZURE_TENANT_ID}
-      NEXT_PUBLIC_API_URL: ${NEXT_PUBLIC_API_URL}
-      NEXTAUTH_URL: ${NEXTAUTH_URL}
-      DOCS_API_KEY: ${DOCS_API_KEY}
-      NEXT_PUBLIC_GROUP_ID: ${NEXT_PUBLIC_GROUP_ID}
-      NEXTAUTH_URL_INTERNAL: ${NEXTAUTH_URL_INTERNAL}
-      NEXTAUTH_SECRET: ${NEXTAUTH_SECRET}
+      PORT: 3000
     ports:
       - "3000:3000"
 
