--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -17,6 +17,7 @@ COPY src ./src
 COPY public ./public
 COPY next.config.js .
 COPY tsconfig.json .
+COPY typings ./typings
 
 # Environment variables must be present at build time
 # https://github.com/vercel/next.js/discussions/14030
