--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -58,9 +58,15 @@ server {
   gzip_comp_level 4;
   gzip_types text/css application/javascript image/svg+xml;
 
-  proxy_busy_buffers_size   512k;
-  proxy_buffers   4 512k;
-  proxy_buffer_size   256k;
+  large_client_header_buffers 4 16k;
+  client_header_buffer_size 64k;
+
+  proxy_buffer_size 64k;
+  proxy_buffers 8 64k;
+
+  # proxy_busy_buffers_size   512k;
+  # proxy_buffers   4 512k;
+  # proxy_buffer_size   256k;
   proxy_http_version 1.1;
   proxy_set_header Upgrade $http_upgrade;
   proxy_set_header Connection 'upgrade';
