--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@ant-design/cssinjs": "^1.16.1",
     "@ant-design/icons": "^5.2.4",
     "@ant-design/pro-layout": "^7.19.0",
+    "@react-hookz/web": "^24.0.4",
     "@tanstack/react-query": "^5.13.4",
     "@tanstack/react-query-devtools": "^5.13.5",
     "antd": "^5.17.3",
