Feature: Busqueda de expedientes por caratula

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,8 @@ AZURE_TENANT_ID=
 NEXT_PUBLIC_API_URL=
 DATABASE_URL=
 NEXTAUTH_URL=
+PG_DATABASE_HOST=
+PG_DATABASE_PORT=
+PG_DATABASE_NAME=
+PG_DATABASE_USERNAME=
+PG_DATABASE_PASSWORD=
