--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -10,3 +10,8 @@ DOCS_API_KEY=
 NEXT_PUBLIC_GROUP_ID=
 NEXTAUTH_SECRET=
 NEXTAUTH_URL_INTERNAL=
+PG_DATABASE_HOST=
+PG_DATABASE_PORT=
+PG_DATABASE_NAME=
+PG_DATABASE_USERNAME=
+PG_DATABASE_PASSWORD=
