--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,30 +8,34 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@ant-design/cssinjs": "^1.16.1",
+    "@ant-design/cssinjs": "^1.22.1",
     "@ant-design/icons": "^5.2.4",
     "@react-hookz/web": "^24.0.4",
     "@tanstack/react-query": "^5.13.4",
     "@tanstack/react-query-devtools": "^5.13.5",
-    "antd": "^5.17.3",
+    "antd": "^5.23.1",
     "axios": "^1.7.4",
     "date-fns": "^2.29.3",
     "dayjs": "1.8.28",
     "export-to-csv": "^1.2.1",
-    "next": "^14.2.6",
-    "next-auth": "^4.24.5",
+    "next": "^14.2.23",
+    "next-auth": "^4.24.11",
+    "nuqs": "^2.3.1",
     "oracledb": "^6.1.0",
+    "pg": "^8.13.1",
     "qs": "^6.7.0",
     "react": "^18.2.0",
     "react-data-export": "^0.6.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "xlsx": "^0.18.5",
+    "zod": "^3.24.1",
     "zustand": "^4.5.4"
   },
   "license": "MIT",
   "devDependencies": {
     "@types/node": "^20.10.4",
+    "@types/pg": "^8.11.10",
     "@types/qs": "^6.9.10",
     "@types/react": "^18.2.45",
     "@types/react-dom": "^18.2.17",
