--- a/.env.example
+++ b/.env.example
@@ -9,6 +9,12 @@ HOST=0.0.0.0
 PORT=1337
 API_URL=
 ADMIN_JWT_SECRET=
+SMTP_HOST=
+SMTP_PORT=
+SMTP_USERNAME=
+SMTP_PASSWORD=
+DEFAULT_EMAIL=
+FRONTEND_URL=
 
 # Frontend
 NODE_ORACLEDB_USER=
