--- a/backend/package.json
+++ b/backend/package.json
@@ -14,14 +14,19 @@
     "strapi": "strapi"
   },
   "dependencies": {
-    "@strapi/plugin-i18n": "^4.25.7",
-    "@strapi/plugin-users-permissions": "^4.25.7",
-    "@strapi/strapi": "^4.25.7",
+    "@strapi/plugin-i18n": "^4.25.13",
+    "@strapi/plugin-users-permissions": "^4.25.19",
+    "@strapi/provider-email-nodemailer": "^4.25.19",
+    "@strapi/strapi": "^4.25.19",
+    "axios": "^1.7.9",
     "better-sqlite3": "8.6.0",
+    "date-fns": "^2.29.3",
     "pg": "8.12.0",
+    "qs": "^6.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.3.4",
+    "strapi-plugin-email-designer": "^2.2.1",
     "styled-components": "5.3.11"
   },
   "engines": {
