--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,7 @@
     "antd": "^5.24.8",
     "axios": "^1.9.0",
     "date-fns": "^2.29.3",
-    "dayjs": "1.8.28",
+    "dayjs": "^1.11.13",
     "export-to-csv": "^1.2.1",
     "next": "^15.3.1",
     "next-auth": "^4.24.11",
